# Karthiks_Model_Engine

./: Karthiks_Model_Engine.py  LICENSE  README.md  art.py  requirements.txt  rfc.xlsx  setup.cfg  train.xlsx
fluid_domain/: art.py
