[metadata]
name = KMEngine
version = 1.1.0
author = Karthik Devalla
author_email = ihatecoding666@gmail.com
description = This package streamlines machine learning model training, evaluation, and customization with support for regression and classification tasks, automated workflow, diverse model integration, EDA, serialization, and parameter tuning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KarthikDevalla/Karthiks_Model_Engine.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True

